// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/FormFooter with submit and cancel button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c3 {
  background-color: #13bebb;
  padding: 0.1rem 2rem;
  border: none;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c3:hover {
  background-color: #06a09e;
  color: #fff;
}

.c3:active {
  background-color: #06a09e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c3:disabled {
  background-color: #7d7d7d;
}

.c3:disabled,
.c3:disabled:hover {
  cursor: default;
}

.c4 {
  display: inline-block;
  font-size: 1rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
}

.c2 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c2:hover {
  color: #513CA3;
}

.c1 {
  position: relative;
  text-align: right;
  padding: 1.1rem 1.875rem;
}

.c1 button:last-child {
  margin-left: 2rem;
  margin-right: 0.7rem;
}

@media (max-width:540px) {
  .c3 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      color="secondary"
      data-test="cancelButton"
      onClick={[Function]}
      size="md"
      type="button"
    >
      Cancel
    </button>
    <button
      className="c3"
      color="primary"
      data-test="footerTestButton"
      disabled={false}
      onClick={[Function]}
      size="sm"
      type="button"
    >
      <span
        className="c4"
        size="sm"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/molecules/FormFooter with submit button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  background-color: #13bebb;
  padding: 0.1rem 2rem;
  border: none;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c2:hover {
  background-color: #06a09e;
  color: #fff;
}

.c2:active {
  background-color: #06a09e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c2:disabled {
  background-color: #7d7d7d;
}

.c2:disabled,
.c2:disabled:hover {
  cursor: default;
}

.c3 {
  display: inline-block;
  font-size: 1rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
}

.c1 {
  position: relative;
  text-align: right;
  padding: 1.1rem 1.875rem;
}

.c1 button:last-child {
  margin-left: 2rem;
  margin-right: 0.7rem;
}

@media (max-width:540px) {
  .c2 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      color="primary"
      data-test="footerTestButton"
      disabled={false}
      onClick={[Function]}
      size="sm"
      type="button"
    >
      <span
        className="c3"
        size="sm"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Storyshots @components/molecules/FormFooter with top divider 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  background-color: #13bebb;
  padding: 0.1rem 2rem;
  border: none;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c2:hover {
  background-color: #06a09e;
  color: #fff;
}

.c2:active {
  background-color: #06a09e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c2:disabled {
  background-color: #7d7d7d;
}

.c2:disabled,
.c2:disabled:hover {
  cursor: default;
}

.c3 {
  display: inline-block;
  font-size: 1rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
}

.c1 {
  position: relative;
  text-align: right;
  padding: 1.1rem 1.875rem;
  border-top: 1px solid #f1f5f5;
}

.c1 button:last-child {
  margin-left: 2rem;
  margin-right: 0.7rem;
}

@media (max-width:540px) {
  .c2 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      color="primary"
      data-test="footerTestButton"
      disabled={false}
      onClick={[Function]}
      size="sm"
      type="button"
    >
      <span
        className="c3"
        size="sm"
      >
        Save
      </span>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;
